@@ -1,3 +1,9 @@
+2004-02-18  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b3)
+
+	* Another try at fixing that Swing error. I now think that this
+	  is tied to Swing's attempt to use Windows XP themes. I'm now
+	  using a property that should disable this buggy behavior.
+
 2004-02-18  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b2)
 
 	* Catching a wierd VM bug that causes many users not to be able
